src/objects/geopointe__GP_Route_Plan_Optimization_History__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Different_Start_Locations__c</fullName>
        <label>Different Start Locations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Freq_Num_Visits__c</fullName>
        <inlineHelpText>Number of visits per period.</inlineHelpText>
        <label>Target Frequency Visits Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Job_Summary__c</fullName>
        <label>Job Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object__c</fullName>
        <inlineHelpText>The name of the map object this Route Plan Optimization History is based upon.</inlineHelpText>
        <label>Map Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Optimization_Date__c</fullName>
        <label>Optimization Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Freq_Num_Visits_Field__c</fullName>
        <inlineHelpText>Field used to store the number of visits per period based on a number field on the map object.</inlineHelpText>
        <label>Target Frequency Visits Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Plan</label>
        <referenceTo>geopointe__GP_Route_Plan__c</referenceTo>
        <relationshipLabel>GP Route Plan Optimization History</relationshipLabel>
        <relationshipName>GP_Route_Plan_Optimization_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GP Route Plan Optimization History</label>
    <nameField>
        <label>GP Route Plan Optimization History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Route Plan Optimization Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>